# haskell-homework

./: .gitignore  Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Example.hs  FindIdentifier.hs  FindIdentifier_Test.hs  FirstScript.hs  Test.hs  UsePictures.hs  help.txt  stack.yaml  thompson.cabal
fp101/: Category.hs  Church.hs  Homework.hs  Homework01.hs  Homework02.hs  Homework03.hs  Homework04.hs  Homework05.hs  Homework06.hs  Homework08.hs  Homework09.hs  Homework11.hs  Homework12.hs  Homework13.hs  Intro.hs  Jam06.hs  Junk.hs  Lab4.hs  Lecture00.hs  Lecture01.hs  Lecture02.hs  Lecture03.hs  Lecture04.hs  Lecture05.hs  Lecture06.hs  Lecture07.hs  Lecture08.hs  Lecture09.hs  Lecture10.hs  Lecture11.hs  Lecture12.hs  Monads.hs  Parser.hs  addition.hs  church.cl  church.el  countdown.lhs  lab2.hs  lab3.hs  parsing.lhs  (+2 more)
fp101/IO/: InpOut.hs  Reverse.hs  appendtodo.hs  capslocker.hs  getchar_test.hs  getchar_test2.hs  girlfriend.hs  girlfriendtocaps.hs  haiku.txt  helloworld.hs  palindrome.hs  print_test.hs  random.hs  random_string.hs  shorlinesonly.hs  shortlines.txt  shortlinesonly.hs
