name:                thompson
version:             0.1.0.0
synopsis:            Simon Thomason's Craft of Haskell 3ed edition
description:         Please see README.md
homepage:            http://github.com/emaphis/thompson
license:             BSD3
license-file:        LICENSE
author:              Ed Maphis
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Education
build-type:          Simple

extra-source-files:
  black.jpg
  white.jpg
  red.jpg
  blue.jpg
  blk_horse_head.jpg
  svgOut.xml
  showPic.html
  refresh.html

cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck >= 2.1 && < 3,
                       old-locale == 1.0.*,
                       time >= 1.1 && < 2.0,
                       mtl >= 1.1 && < 2.3,
                       HUnit == 1.2.*
  default-language:    Haskell2010

  other-modules:
                Pic
                Pictures
                PicturesSVG
                FirstScript
                Chapter2
                Usepictures
                Chapter3
                Chapter4
                Chapter5
--                fp101//Lecture00
--                fp101//Lecture01

source-repository head
  type:     git
  location: https://github.com/emaphis/thompson
